fixed-overflow

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-body {
+.hiding-overflow {
     overflow-x: hidden;
 }
 
